--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,11 +27,13 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
+    
+    - name: run unit testing
     - run: npm test
     
-    - name: running linters
-    - run: npm install travis-lint
-    - run: npm lint
+  # - name: running linters
+   # - run: npm install travis-lint
+   # - run: npm lint
     
 
     - name: Set up Docker Buildx
