--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
     - run: npm run build --if-present
     
     - name: run unit testing
-    - run: npm test
+      run: npm test
     
   # - name: running linters
    # - run: npm install travis-lint
