--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,10 +31,9 @@ jobs:
     - name: run unit testing
       run: npm test
     
-  # - name: running linters
-   # - run: npm install travis-lint
-   # - run: npm lint
-    
+    - name: run linters
+      run: npm install travis-lint
+    - run: npm lint
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
