--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,6 +10,14 @@ on:
     branches: [ master ]
 
 jobs:
+  
+  eslint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: ESLint
+      - uses: stefanoeb/eslint-action@1.0.2
+  
   build:
 
     runs-on: ubuntu-latest
