--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,9 +14,9 @@ jobs:
   eslint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: ESLint
-      - uses: stefanoeb/eslint-action@1.0.2
+    - uses: actions/checkout@v1
+    - name: ESLint
+      uses: stefanoeb/eslint-action@1.0.2
   
   build:
 
